Quartz sync: Sep 5, 2024, 4:53 PM

--- a/quartz/styles/callouts.scss
+++ b/quartz/styles/callouts.scss
@@ -45,9 +45,9 @@
 
   &[data-callout="info"],
   &[data-callout="todo"] {
-    --color: #00b8d4;
-    --border: #00b8d444;
-    --bg: #00b8d410;
+    --color: #af125a;
+    --border: #af125a44;
+    --bg: #af125a10;
     --callout-icon: var(--callout-icon-info);
   }
 
