--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -1,7 +1,5 @@
 @use "./base.scss";
 
- --callout-icon-info: url('data:image/svg+xml; utf8, <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="16" x2="12" y2="12"></line><line x1="12" y1="8" x2="12.01" y2="8"></line></svg>');
-
 
 // put your custom CSS here!
 .callout {
@@ -9,6 +7,6 @@
     --color: #af125a;
     --border: #af125a44;
     --bg: #af125a10;
-    --callout-icon: var(--callout-icon-info); //SVG icon code
+    --callout-icon: url('data:image/svg+xml; utf8, <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="16" x2="12" y2="12"></line><line x1="12" y1="8" x2="12.01" y2="8"></line></svg>');
   }
 }
